--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: second_github_action
+name: lambda_zip_test
 on: [push]
 jobs:
-  aws_cp:
+  lambda_demo:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -12,5 +12,14 @@ jobs:
           aws-access-key-id: ${{ secrets.awsaccesskeyid }}
           aws-secret-access-key: ${{ secrets.AWSSECRETACCESSKEY }}
           aws-region: ap-south-1
-      - name: Upload to s3
-        run: aws s3 cp ./app.py s3://venckat-demo-bucket
+      -  name: Creating deployment zip
+         run: |
+          sudo apt install zip
+          mkdir -p ./deployment_zip 
+          pip install snowflake-connector-python --platform manylinux2010_x86_64 --only-binary=:all: -t ./deployment_zip
+          cp ./lambda_function.py  ./deployment_zip
+          cd deployment_zip 
+          zip -r lambda_zip.zip *
+      - name: lambda_code_update
+        run: |
+          aws lambda update-function-code --function-name lambda_deployment_via_gitactions --zip-file fileb://./deployment_zip/lambda_zip.zip
